--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div id="div_main">
 
 		<h1 id="welcome_01">Premier</h1>
-		<p>your best solution for task mangemnts</p>
+		<p>your best solution for task management</p>
 
 	</div>
 	<!-- change -->
